# orchestrator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  mise.toml  todo.txt
.github/workflows/: docker-publish.yml
benches/windmill-dev/: .gitignore  Dockerfile  README.md  analyze.py  docker-compose.yml  gen_flows.py  run_bench.sh
benches/windmill-dev/flows/: bench_10.yaml  bench_40.yaml
benches/windmill-dev/plugins/fibo/: fibo  plugin.json
docs/: railway.md
docs/plans/: 2026-07-05-orchestrator-design.md  2026-07-05-orchestrator-implementation.md  2026-07-06-byow-workers-design.md  2026-07-06-byow-workers-implementation.md  2026-07-06-external-binary-plugins-design.md  2026-07-06-flow-json-schema-autocomplete-design.md  2026-07-07-auth-design.md  2026-07-07-auth-implementation.md  2026-07-07-unified-plugin-protocol-design.md  2026-07-09-unified-execution-design.md
examples/: demo-flow.yaml
plugins/http/: Cargo.toml  plugin.json
plugins/http/src/: main.rs
plugins/sdk/: Cargo.toml
plugins/sdk/src/: lib.rs
scripts/: demo.sh  screenshots.mjs
src/: auth.rs  config.rs  db.rs  lib.rs  main.rs  scheduler.rs  secrets.rs  ui.rs
src/api/: auth.rs  flows.rs  misc.rs  mod.rs  runs.rs  worker.rs
src/engine/: events.rs  mod.rs  run.rs  sink.rs  wire.rs
src/expr/: mod.rs  parse.rs  render.rs
src/model/: flow.rs  mod.rs  schema.rs  validate.rs  yaml.rs
src/plugins/: external.rs  http.rs  mod.rs  persistent.rs  testing.rs
src/worker/: mod.rs
tests/: api_auth.rs  api_flows.rs  api_runs.rs  db.rs  engine.rs  model.rs  scheduler.rs  secrets_db.rs  worker_e2e.rs  worker_stream.rs
ui/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.html
ui/src/lib/: api.test.ts  api.ts  breadcrumb.ts  dashboard.test.ts  dashboard.ts  format.test.ts  format.ts  picker.test.ts  picker.ts  smoke.test.ts  status.ts  template.test.ts  template.ts  theme.css  toast.ts
ui/src/lib/builder/: Builder.svelte  EnvelopePanel.svelte  ImportModal.svelte  InspectorInputs.svelte  InspectorParallel.svelte  InspectorTask.svelte  InspectorTrigger.svelte  InspectorVars.svelte  IssueList.svelte  OutputsTable.svelte  PluginTaskEditor.svelte  RevisionsPanel.svelte  RunModal.svelte  TaskCanvas.svelte  YamlPane.svelte  defs.test.ts  (+10 more)
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+39 files in other folders)
