[workspace]
members = ["plugins/sdk", "plugins/http"]
resolver = "3"

[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"
description = "Single-binary workflow orchestration tool: web UI, JSON API, cron scheduler, task executor"
license = "MIT"

[dependencies]
argon2 = "0.5"
async-trait = "0.1"
axum = "0.8"
chacha20poly1305 = "0.11"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
croner = "3"
dirs = "6"
futures = "0.3"
getrandom = "0.2"
plugin-sdk = { path = "plugins/sdk" }
r2d2 = "0.8"
r2d2_sqlite = "0.34"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2", "charset"] }
rusqlite = { version = "0.39", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
jsonschema = "0.35"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
